cmake_minimum_required(VERSION 3.19)
project(DaysOfCode)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)

add_executable(
        DaysOfCode
        concepts/a001.cpp
        concepts/a002.cpp
        TEST.cpp
        a001.cpp
        a002.cpp
        a003.cpp
        a004.cpp
        a005.cpp
        a006.cpp
        a007.cpp
        a008.cpp
        a009.cpp
        a010.cpp
        a011.cpp
        a012.cpp
        a013.cpp
        a014.cpp
        a015.cpp
        a016.cpp
        a017.cpp
        a018.cpp
        a019.cpp
        a020.cpp
        a021.cpp
        a022.cpp
        a023.cpp
        a024.cpp
        a025i.cpp
        a025ii.cpp
        a026.cpp
        a027.cpp
        a028.cpp
        a029.cpp
        a030.cpp
        a031.cpp
        a032.cpp
        a033.cpp
        a034.cpp
        a035.cpp
        a036.cpp
        a037.cpp
        a038.cpp
        a039.cpp
        a040.cpp
        a041.cpp
        a042.cpp
        a043.cpp
        a044.cpp
        a045i.cpp
        a045ii.cpp
        a046.cpp
        a047.cpp
        a048.cpp
        a049.cpp
        a050.cpp
        a051.cpp
        a052.cpp
        a053.cpp
        a054.cpp
        a055.cpp
        a056.cpp
        a057.cpp
        a058.cpp
        a059.cpp
        a060.cpp
        a061.cpp
        a062.cpp
        a063.cpp
        a064.cpp
        a065.cpp
        a066.cpp
        a067.cpp
        a068.cpp
        a069.cpp
        a070.cpp
        a071.cpp
        a072.cpp
        a073.cpp
        a074.cpp
        a075.cpp
        a076.cpp
        a077.cpp
        a078.cpp
        a079.cpp
        a080.cpp
        a081.cpp
        a082.cpp
        a083.cpp
        a084.cpp
        a085.cpp
        a086.cpp
        a087.cpp
        a088i.cpp
        a088ii.cpp
        a088iii.cpp
        a089.cpp
        a090.cpp
        a091i.cpp
        a091ii.cpp
        a092.cpp
        a093.cpp
        a094.cpp
        a095.cpp
        a096.cpp
        a097.cpp
        a098.cpp
        a099.cpp
        a100.cpp
        a101.cpp
        a102.cpp
        a103i.cpp
        a103ii.cpp
        a104.cpp
        a105.cpp
        a106.cpp
        a107.cpp
        a108.cpp
        a109.cpp
        a110.cpp
        a111.cpp
        a112.cpp
        a113.cpp
        a114.cpp
        a115.cpp
        a116.cpp
        a117i.cpp
        a117ii.cpp
        a118.cpp
        a119i.cpp
        a119ii.cpp
        a120.cpp
        a121.cpp
        a122.cpp
        a123.cpp
        a124.cpp
        a125.cpp
        a126.cpp
        a127.cpp
        a128.cpp
        a129.cpp
        a130.cpp
        a131.cpp
        a132.cpp
        a133.cpp
        a134.cpp
        a135.cpp
        a136.cpp
        a137.cpp
        a138.cpp
        a139.cpp
        a140.cpp
        a141.cpp
)
